# esp-hal-wifimanager

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html
.cargo/: config.toml
examples/: Cargo.toml  build.rs  cfg.toml
examples/.cargo/: config.toml
examples/src/: hasher.rs  main.rs
src/: ap.rs  bluetooth.rs  http.rs  lib.rs  nvs.rs  panel.html  structs.rs  update.html  update_panel.html  utils.rs
