[package]
name = "esp-hal-wifimanager"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wifi Manager for esp-hal (bt+wifi ap)"
repository = "https://github.com/filipton/esp-hal-wifimanager"


[lib]

[dependencies]
esp-hal = { version = "0.23.1", default-features = false, features = [] }
esp-hal-embassy = { version = "0.6.0", default-features = false, features = [] }
embassy-net = { version = "0.6.0", default-features = false, features = ["tcp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [ "wifi" ] }

# TODO: maybe replace with [trouble](https://github.com/embassy-rs/trouble)??
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"], optional = true }

static_cell = { version = "2.1.0" }
log = "0.4.25"
embassy-time = { version = "0.4.0", default-features = false }
embassy-executor = { version = "0.7.0", default-features = false }
heapless = { version = "0.8.0", default-features = false }
embassy-sync = { version = "0.6.1", default-features = false }
esp-storage = { version = "0.4.0", default-features = false, features = ["storage", "critical-section"] }
embedded-storage = "0.3.1"
tickv = "2.0.0"
esp-hal-dhcp-server = { version = "0.2.3", optional = true }
embassy-futures = "0.1.1"
serde = { version = "1.0.217", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.135", default-features = false, features = ["alloc"] }
embedded-io-async = "0.6.1"
portable-atomic = { version = "1.10.0", default-features = false }
picoserve = { git = "https://github.com/hodasemi/picoserve", rev = "c4fe40eccfcd1188f117d4b7c689f6dc48c94d44", optional = true, features = ["alloc", "embassy"] }

[features]
#default = []
#default = ["esp32s3", "ap", "ble"]
default = ["esp32s3", "ap", "ble"]

esp32s2 = ["esp-hal/esp32s2","esp-wifi/esp32s2","esp-hal-embassy/esp32s2","esp-storage/esp32s2"]
esp32s3 = ["esp-hal/esp32s3","esp-wifi/esp32s3","esp-hal-embassy/esp32s3","esp-storage/esp32s3"]

esp32c2 = ["esp-hal/esp32c2","esp-wifi/esp32c2","esp-hal-embassy/esp32c2","esp-storage/esp32c2"]
esp32c3 = ["esp-hal/esp32c3","esp-wifi/esp32c3","esp-hal-embassy/esp32c3","esp-storage/esp32c3"]
esp32c6 = ["esp-hal/esp32c6","esp-wifi/esp32c6","esp-hal-embassy/esp32c6","esp-storage/esp32c6"]

esp32 = ["esp-hal/esp32","esp-wifi/esp32","esp-hal-embassy/esp32","esp-storage/esp32"]

ap = ["dep:esp-hal-dhcp-server", "dep:picoserve"]
ble = ["dep:bleps", "esp-wifi/ble", "esp-wifi/coex"]
env = []

[profile.dev]
opt-level = 2
