[package]
name = "esp-hal-wifimanager"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Wifi Manager for esp-hal (bt+wifi ap)"
repository = "https://github.com/filipton/esp-hal-wifimanager"


[lib]

[dependencies]
esp-hal = { version = "1.0.0-rc.0", default-features = false, features = ["unstable", "rt"] }
esp-hal-embassy = { version = "0.9.0", default-features = false, features = [] }
embassy-net = { version = "0.7.0", default-features = false, features = ["tcp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
esp-wifi = { version = "0.15.0", default-features = false, features = [ "wifi" ] }
static_cell = { version = "2.1.1" }
log = "0.4.27"
embassy-time = { version = "0.4.0", default-features = false }
embassy-executor = { version = "0.7.0", default-features = false }
heapless = { version = "0.8.0", default-features = false }
embassy-sync = { version = "0.7.0", default-features = false }
esp-storage = { version = "0.7.0", default-features = false, features = ["critical-section"] }
embedded-storage = "0.3.1"
tickv = "2.0.0"
esp-hal-dhcp-server = { version = "0.2.6", optional = true }
embassy-futures = "0.1.1"
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.141", default-features = false, features = ["alloc"] }
embedded-io-async = "0.6.1"
portable-atomic = { version = "1.11.1", default-features = false }
picoserve = { version = "0.16.0", optional = true, features = ["alloc", "embassy"] }
esp-wifi-sys = "0.7.1"
trouble-host = { version = "0.2.4", optional = true }

[features]
#default = []
#default = ["esp32s3", "ap", "ble"]
default = ["esp32s3", "ap", "ble"]

esp32s2 = ["esp-hal/esp32s2","esp-wifi/esp32s2","esp-hal-embassy/esp32s2","esp-storage/esp32s2","esp-wifi-sys/esp32s2"]
esp32s3 = ["esp-hal/esp32s3","esp-wifi/esp32s3","esp-hal-embassy/esp32s3","esp-storage/esp32s3","esp-wifi-sys/esp32s3"]

esp32c2 = ["esp-hal/esp32c2","esp-wifi/esp32c2","esp-hal-embassy/esp32c2","esp-storage/esp32c2","esp-wifi-sys/esp32c3"]
esp32c3 = ["esp-hal/esp32c3","esp-wifi/esp32c3","esp-hal-embassy/esp32c3","esp-storage/esp32c3","esp-wifi-sys/esp32c3"]
esp32c6 = ["esp-hal/esp32c6","esp-wifi/esp32c6","esp-hal-embassy/esp32c6","esp-storage/esp32c6","esp-wifi-sys/esp32c6"]

esp32 = ["esp-hal/esp32","esp-wifi/esp32","esp-hal-embassy/esp32","esp-storage/esp32","esp-wifi-sys/esp32"]

ap = ["dep:esp-hal-dhcp-server", "dep:picoserve"]
ble = ["dep:trouble-host", "esp-wifi/ble", "esp-wifi/coex"]
env = []

[profile.dev]
opt-level = 2
