[package]
name = "esp-hal-wifimanager"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Wifi Manager for esp-hal (bt+wifi ap)"
repository = "https://github.com/filipton/esp-hal-wifimanager"


[lib]

[dependencies]
esp-hal = { version = "1.0.0", default-features = false, features = ["unstable", "rt"] }
esp-rtos = { version = "0.2.0", default-features = false, features = ["embassy"] }
embassy-net = { version = "0.8.0", default-features = false, features = ["tcp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
esp-radio = { version = "0.17.0", default-features = false, features = [ "unstable", "wifi" ] }
static_cell = { version = "2.1.1" }
log = "0.4.29"
embassy-time = { version = "0.5.0", default-features = false }
embassy-executor = { version = "0.9.1", default-features = false }
heapless = { version = "0.9.2", default-features = false }
embassy-sync = { version = "0.7.2", default-features = false }
esp-storage = { version = "0.8.1", default-features = false, features = ["critical-section"] }
embedded-storage = "0.3.1"
tickv = "2.0.0"
esp-hal-dhcp-server = { version = "0.2.8", optional = true }
embassy-futures = "0.1.2"
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
embedded-io-async = "0.7.0"
portable-atomic = { version = "1.13.0", default-features = false }
trouble-host = { version = "0.5.1", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "=0.2.15", features = ["custom"] }

[features]
#default = []
#default = ["esp32s3", "ap", "ble"]
default = ["esp32s3", "ap", "ble"]

esp32s2 = ["esp-hal/esp32s2","esp-radio/esp32s2","esp-rtos/esp32s2","esp-storage/esp32s2"]
esp32s3 = ["esp-hal/esp32s3","esp-radio/esp32s3","esp-rtos/esp32s3","esp-storage/esp32s3"]

esp32c2 = ["esp-hal/esp32c2","esp-radio/esp32c2","esp-rtos/esp32c2","esp-storage/esp32c2"]
esp32c3 = ["esp-hal/esp32c3","esp-radio/esp32c3","esp-rtos/esp32c3","esp-storage/esp32c3"]
esp32c6 = ["esp-hal/esp32c6","esp-radio/esp32c6","esp-rtos/esp32c6","esp-storage/esp32c6"]

esp32 = ["esp-hal/esp32","esp-radio/esp32","esp-rtos/esp32","esp-storage/esp32"]

ap = ["dep:esp-hal-dhcp-server"]
ble = ["dep:trouble-host", "esp-radio/ble", "esp-radio/coex"]
env = []

[profile.dev]
opt-level = 2
