[package]
name = "wifimanager-example"
version = "0.1.0"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.12.1", features = [ "esp32s3", "exception-handler", "panic-handler", "println" ] }
esp-hal = { version = "0.18.0", features = [ "esp32s3", "async" ] }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }
log = { version = "0.4.22" }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-wifi", features = [ "esp32s3", "phy-enable-usb", "coex" ] }
esp-hal-embassy = { version = "0.1.0", features = ["time-timg0", "integrated-timers", "esp32s3"] }
embassy-executor = { version = "0.5.0", package = "embassy-executor", features = ["arch-riscv32", "task-arena-size-10240"] }
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-time = { version = "0.3.1" }
esp-storage = { version = "0.3.0", features = ["esp32s3"] }
esp-hal-wifimanager = { path = "../" }
static_cell = { version = "2.1.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }
embedded-storage = "0.3.1"
tickv = "1.0.0"
embassy-sync = "0.6.0"

[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-hal" } 
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-hal-embassy" } 

[build-dependencies]
dotenvy = "0.15.7"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
